<resources>
    <string name="app_name">PC-Controller</string>
    <string name="title_system_tasks">任务管理器</string>
    <string name="string_lock">锁定</string>
    <string name="string_shutdown">关机</string>
    <string name="string_restart">重启</string>
    <string name="string_logout">注销</string>
    <string name="string_sleep">休眠</string>
    <string name="string_awake">唤醒</string>
    <string name="string_close_screen">关闭屏幕</string>
    <string name="string_close_display">打开/关闭显示器</string>
    <string name="string_screen_savers">屏幕保护</string>
    <string name="string_get_tasks">查看系统进程</string>
    <string name="string_dis_connect">断开连接</string>
    <string name="string_setting">设置</string>
    <string name="string_send">发送</string>
    <string name="string_mouse">鼠标灵敏度：%d</string>
    <string name="string_volume">系统音量：%d</string>
    <string name="string_sendtext_tag">发送文本</string>
</resources>
